--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,10 @@ target/
 
 sandbox/
 
+# Python caches
+__pycache__/
+.cache/
+
 # Remove Cargo.lock from gitignore if creating an executable, leave it for libraries
 # More information here http://doc.crates.io/guide.html#cargotoml-vs-cargolock
 Cargo.lock
